style: 应用 Java 17 语法糖消除 21 项 Sonar 坏味道
- instanceof 模式匹配替代强制转换（S6201，FileWrapper/EnhancedMultipartFile/FileStorageService）
- Stream.collect(Collectors.toList()) 改为 Stream.toList()（S6204，ReflectUtils/AccessLogUtils/FileStorageService/StorageDecoratorManager/LocalStorageStrategy）
- 合并可嵌套的 if 语句（S1066，AccessLogUtils/TopicUtils/FileTypeValidator/ProgressTracker）
- 移除冗余强制转换，收窄局部变量类型（S1905，StorageDecoratorManager）

Assisted-by: ZCode